# cg-snake3d

./: CMakeLists.txt  README.md  README.txt  framework.cpp  framework.h  main.cpp  mouse.h  raster.cpp  raster.h  snake.cpp  snake.h  snake3d.sln  snake3d.vcxproj
Debug/: snake3d.ilk  vc120.idb
Debug/snake3d.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  snake3d.lastbuildstate
objects/: Thumbs.db  mouse.mtl  snakebody.blend  snakebody.blend1  snakebody.mtl  snakecurve.blend  snakecurve.blend1  snakecurve.mtl  snakehead.mtl  snaketail.blend  snaketail.blend1  snaketail.mtl
shader/: default.fs.glsl  default.vs.glsl  main.fs.glsl  main.vs.glsl  raster.fs.glsl  raster.vs.glsl  snake.fs.glsl  snake.vs.glsl
